--- a/estiloUX/home.html
+++ b/estiloUX/home.html
@@ -1,27 +1,37 @@
-<html lang="pt-br">
-    <head>
-        <style>
-            article {
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EstiloUX</title>
+    <link rel="stylesheet" href="css/estilo.css">
+</head>
+<body>
+    <header>
 
-            }
-        </style>
-    </head
-    >
-    <body>
-        <section>
-            <article>
-                <img src="tih.gif" width="100px" height="100px">
-                <h1>largatixa!!</h1>
-            </article>
+     <div class="layout-grid header-flex">
+         <h1>Estilos<span class="ux">UX</span></h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Sobre</a>
+            <a href="#">Contato</a>
+        </nav>
+     </div>
+       
+    </header>
+    <main>
+        <div class="layout-grid main-flex">  
+            
+            <section class="harmonia"></section>     
 
-            <article>
-                <img src="tigre.jpg" width="100px" height="100px">
-                <h1>tigre sentadooo!!</h1>
-            </article>
+            <aside></aside>
 
-            <article>
-                <img src="dance-macarena.gif" width="100px" height="100px">
-                <h1>macarenaaa</h1>
-            </article>
-        </section>
-    </body>
+        </div>
+    </main>
+
+    <footer>
+        <p>estilo ux - todos os direitos reservados</p>
+    </footer>
+
+</body>
+</html>
